feat: Adding nav-bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
 		<link rel="stylesheet" href="css/index.css" />
 	</head>
 	<body>
+		<header>
+			<nav class="flex-horizontal justify-space-between">
+				<div class="flex-horizontal reverse grow">
+					<a href="#">S'inscrire</a>
+					<a href="#activites" class="anchor">Activités</a>
+					<a href="#hebergements" class="anchor active">Hébergements</a>
+				</div>
+			</nav>
+		</header>
+		<main>
+			<section id="hebergements">
 
+			</section>
+			<section id="activites">
+
+			</section>
+		</main>
 	</body>
 </html>
