feat: Adding logo to nav-bar

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<body>
 		<header>
 			<nav class="flex-horizontal justify-space-between">
+				<img src="images/logo/Reservia.svg" alt="Logo Reservia" />
 				<div class="flex-horizontal reverse grow">
 					<a href="#">S'inscrire</a>
 					<a href="#activites" class="anchor">Activités</a>
