feat: Adding search form

--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
 			</nav>
 		</header>
 		<main>
+			<section class="flex-vertical">
+				<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+				<small class="text-grey">En plein centre ville ou en pleine nature</small>
+				<form action="#" id="search-form" class="flex-horizontal" style="max-width: 250px">
+					<label for="location_search" class="flex-vertical justify-center">
+						<!--Location Pin icon-->
+						PIN
+					</label>
+					<input type="text" name="location_search" id="location_search" class="grow" />
+					<input type="submit" value="Rechercher" />
+				</form>
+			</section>
 			<section id="hebergements">
 
 			</section>
