feat: Adding Font Awesome Library fix: Replaced old PIN text to fa-map-marker real icon fix: Replaced old Rechercher text to real fa-search icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
 		<!-- Style !-->
 		<link href="css/index.css" rel="stylesheet" />
+
+		<!-- Font Awesome Kit !-->
+		<script crossorigin="anonymous" src="https://kit.fontawesome.com/47425e3146.js"></script>
 	</head>
 	<body>
 		<header>
@@ -28,12 +31,11 @@
 				<small class="text-grey">En plein centre ville ou en pleine nature</small>
 				<form action="#" class="flex-horizontal" id="search-form">
 					<label class="flex-vertical justify-center" for="location_search">
-						<!--Location Pin icon-->
-						PIN
+						<i class="fa fa-map-marker"></i>
 					</label>
 					<input id="location_search" name="location_search" type="text" />
 					<button type="submit">
-						Rechercher
+						<i class="fa fa-search text-white"></i>
 					</button>
 				</form>
 			</section>
