feat: Adding filters section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,35 @@
 					</button>
 				</form>
 			</section>
+			<section id="filters-section">
+				<h1>Filtres</h1>
+				<div class="filters-container">
+					<button type="button">
+						<span class="filter-icon">
+							<i class="fa fa-money-bill"></i>
+						</span>
+						<span class="filter-text">Économique</span>
+					</button>
+					<button type="button">
+						<span class="filter-icon">
+							<i class="fa fa-child"></i>
+						</span>
+						<span class="filter-text">Familial</span>
+					</button>
+					<button type="button">
+						<span class="filter-icon">
+							<i class="fa fa-heart"></i>
+						</span>
+						<span class="filter-text">Romantique</span>
+					</button>
+					<button type="button">
+						<span class="filter-icon">
+							<i class="fa fa-dog"></i>
+						</span>
+						<span class="filter-text">Animaux autorisés</span>
+					</button>
+				</div>
+			</section>
 			<section id="hebergements">
 
 			</section>
