--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
 						<span class="filter-text">Animaux autorisés</span>
 					</button>
 				</div>
+				<div class="search-info">
+					<i class="fa fa-info"></i>
+					<p>Plus de 500 logements sont disponibles dans cette ville</p>
+				</div>
 			</section>
 			<section id="hebergements">
 
