--- a/index.html
+++ b/index.html
@@ -114,13 +114,15 @@
 				</div>
 			</section>
 			<section id="popular-lodging">
-				<div class="flex-horizontal justify-space-between align-baseline">
+				<div>
 					<h2>Les plus populaires</h2>
 					<i class="fa fa-chart-line"></i>
 				</div>
-				<div class="flex-vertical">
-					<article class="card">
-						<img alt="Popular photography" class="card-thumbnail" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+				<div>
+					<a class="card-link" href="#/hebergements/hotel-le-soleil-du-matin">
+						<article class="card card-horizontal">
+						<img alt="Popular photography" class="card-thumbnail"
+						     src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
 						     srcset="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg, images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 2x, images/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 3x, images/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 4x" />
 						<!--<picture class="card-thumbnail">
 							<source media="(min-width: 990px)"
@@ -129,7 +131,7 @@
 							<img alt="Popular photography" srcset="homepage-person@mobile.png, homepage-person@mobile-2x.png 2x" />
 						</picture>-->
 						<div class="card-container">
-							<h3>Hôtel Le soleil du matin</h3>
+							<span class="card-title">Hôtel Le soleil du matin</span>
 							<small>Nuit à partir de 128<b>€</b></small>
 							<div class="rating">
 								<i class="fa fa-star full"></i>
@@ -140,11 +142,14 @@
 							</div>
 						</div>
 					</article>
-					<article class="card">
-						<img alt="Popular photography" class="card-thumbnail" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+					</a>
+					<a class="card-link" href="#/hebergements/au-coeur-de-l-eau-chambres-d-hotes">
+						<article class="card card-horizontal">
+						<img alt="Popular photography" class="card-thumbnail"
+						     src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
 						     srcset="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg, images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg 2x, images/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg 3x, images/hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg 4x" />
 						<div class="card-container">
-							<h3>Au cœur de l'eau Chambres d'hôtes</h3>
+							<span class="card-title">Au cœur de l'eau Chambres d'hôtes</span>
 							<small>Nuit à partir de 71<b>€</b></small>
 							<div class="rating">
 								<i class="fa fa-star full"></i>
@@ -155,11 +160,14 @@
 							</div>
 						</div>
 					</article>
-					<article class="card">
-						<img alt="Popular photography" class="card-thumbnail" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+					</a>
+					<a class="card-link" href="#/hebergements/hotel-tout-bleu-et-blanc">
+						<article class="card card-horizontal">
+						<img alt="Popular photography" class="card-thumbnail"
+						     src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
 						     srcset="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg, images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg 2x, images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg 3x, images/hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg 4x" />
 						<div class="card-container">
-							<h3>Hôtel Tout Bleu et Blanc</h3>
+							<span class="card-title">Hôtel Tout Bleu et Blanc</span>
 							<small>Nuit à partir de 68<b>€</b></small>
 							<div class="rating">
 								<i class="fa fa-star full"></i>
@@ -170,10 +178,128 @@
 							</div>
 						</div>
 					</article>
+					</a>
 				</div>
 			</section>
 			<section id="hebergements">
-
+				<h2>Hébergements à Marseille</h2>
+				<div>
+					<a class="card-link" href="#/hebergements/auberge-la-cannebiere">
+						<article class="card">
+							<img alt="Photography of an hostel room at Auberge la Cannebière" class="card-thumbnail"
+							     src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+							     srcset="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg, images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg 2x, images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg 3x, images/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg 4x" />
+							<!--<picture class="card-thumbnail">
+								<source media="(min-width: 990px)"
+								        srcset="images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg,  2x" />
+								<source media="(min-width: 750px)" srcset="homepage-person@tablet.png, homepage-person@tablet-2x.png 2x" />
+								<img alt="Popular photography" srcset="homepage-person@mobile.png, homepage-person@mobile-2x.png 2x" />
+							</picture>-->
+							<div class="card-container">
+								<span class="card-title">Auberge la Cannebière</span>
+								<small>Nuit à partir de 25<b>€</b></small>
+								<div class="rating">
+									<i class="fa fa-star full"></i>
+									<i class="fa fa-star full"></i>
+									<i class="fa fa-star full"></i>
+									<i class="fa fa-star full"></i>
+									<i class="fa fa-star"></i>
+								</div>
+							</div>
+						</article>
+					</a>
+					<a class="card-link" href="#/hebergements/hotel-du-port">
+						<article class="card">
+						<img alt="Photography of an hostel room at Hôtel du port" class="card-thumbnail"
+						     src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+						     srcset="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg, images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg 2x, images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg 3x, images/hebergements/1_xlarge/fred-kleber-gTbaxaVLvsg-unsplash.jpg 4x" />
+						<div class="card-container">
+							<span class="card-title">Hôtel du port</span>
+							<small>Nuit à partir de 52<b>€</b></small>
+							<div class="rating">
+								<i class="fa fa-star full"></i>
+								<i class="fa fa-star full"></i>
+								<i class="fa fa-star full"></i>
+								<i class="fa fa-star full"></i>
+								<i class="fa fa-star full"></i>
+							</div>
+						</div>
+					</article>
+					</a>
+					<a class="card-link" href="#/hebergements/hotel-les-mouettes">
+						<article class="card">
+						<img alt="Photography of an hostel room at Hôtel Les mouettes" class="card-thumbnail"
+						     src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+						     srcset="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg, images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg 2x, images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg 3x, images/hebergements/1_xlarge/reisetopia-B8WIgxA_PFU-unsplash.jpg 4x" />
+						<div class="card-container">
+							<span class="card-title">Hôtel Les mouettes</span>
+							<small>Nuit à partir de 76<b>€</b></small>
+							<div class="rating">
+								<i class="fa fa-star full"></i>
+								<i class="fa fa-star full"></i>
+								<i class="fa fa-star full"></i>
+								<i class="fa fa-star full"></i>
+								<i class="fa fa-star"></i>
+							</div>
+						</div>
+					</article>
+					</a>
+					<a class="card-link" href="#/hebergements/hotel-de-la-mer">
+						<article class="card">
+						<img alt="Photography of an hostel room at Hôtel de la mer" class="card-thumbnail"
+						     src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+						     srcset="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg, images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg 2x, images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg 3x, images/hebergements/1_xlarge/annie-spratt-Eg1qcIitAuA-unsplash.jpg 4x" />
+						<div class="card-container">
+							<span class="card-title">Hôtel de la mer</span>
+							<small>Nuit à partir de 46<b>€</b></small>
+							<div class="rating">
+								<i class="fa fa-star full"></i>
+								<i class="fa fa-star full"></i>
+								<i class="fa fa-star full"></i>
+								<i class="fa fa-star"></i>
+								<i class="fa fa-star"></i>
+							</div>
+						</div>
+					</article>
+					</a>
+					<a class="card-link" href="#/hebergements/auberge-le-panier">
+						<article class="card">
+						<img alt="Photography of an hostel room at Auberge Le Panier" class="card-thumbnail"
+						     src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+						     srcset="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg, images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 2x, images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 3x, images/hebergements/1_xlarge/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 4x" />
+						<div class="card-container">
+							<span class="card-title">Auberge Le Panier</span>
+							<small>Nuit à partir de 23<b>€</b></small>
+							<div class="rating">
+								<i class="fa fa-star full"></i>
+								<i class="fa fa-star full"></i>
+								<i class="fa fa-star full"></i>
+								<i class="fa fa-star full"></i>
+								<i class="fa fa-star"></i>
+							</div>
+						</div>
+					</article>
+					</a>
+					<a class="card-link" href="#/hebergements/hotel-chez-amina">
+						<article class="card">
+						<img alt="Photography of an hostel room at Hôtel chez Amina" class="card-thumbnail"
+						     src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+						     srcset="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg, images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 2x, images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 3x, images/hebergements/1_xlarge/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 4x" />
+						<div class="card-container">
+							<span class="card-title">Hôtel chez Amina</span>
+							<small>Nuit à partir de 96<b>€</b></small>
+							<div class="rating">
+								<i class="fa fa-star full"></i>
+								<i class="fa fa-star full"></i>
+								<i class="fa fa-star full"></i>
+								<i class="fa fa-star full"></i>
+								<i class="fa fa-star full"></i>
+							</div>
+						</div>
+					</article>
+					</a>
+				</div>
+				<a href="#/hebergements" class="read-more-link">Afficher plus</a>
 			</section>
 			<section id="activites">
 
