refacto: Now display activities grid in flex (for mobile-first)

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 			</section>
 			<section id="activites">
 				<h2>Activités à Marseille</h2>
-				<div>
+				<div id="cards-grid">
 					<a class="card-link" href="#/activites/marseille/vieux-port">
 						<article class="card card-full">
 							<img alt="Photography of Vieux Port at Marseille" class="card-thumbnail"
