fix: Approaching pixel-perfect for mobile design  - Smoothing margins & paddings refacto: Shortened some css selectors

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				</form>
 			</header>
 			<section id="filters-section">
-				<h1>Filtres</h1>
+				<h2>Filtres</h2>
 				<div class="filters-container">
 					<button class="filter" type="button">
 						<span class="filter-icon">
@@ -106,7 +106,7 @@
 							     srcset="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg, images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 2x, images/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 3x, images/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 4x" />
 							<div class="card-container">
 								<span class="card-title">Hôtel Le soleil du matin</span>
-								<small>Nuit à partir de 128<b>€</b></small>
+								<small>Nuit à partir de <b>128€</b></small>
 								<div class="rating">
 									<i class="fa fa-star full"></i>
 									<i class="fa fa-star full"></i>
@@ -124,7 +124,7 @@
 							     srcset="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg, images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg 2x, images/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg 3x, images/hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg 4x" />
 							<div class="card-container">
 								<span class="card-title">Au cœur de l'eau Chambres d'hôtes</span>
-								<small>Nuit à partir de 71<b>€</b></small>
+								<small>Nuit à partir de <b>71€</b></small>
 								<div class="rating">
 									<i class="fa fa-star full"></i>
 									<i class="fa fa-star full"></i>
@@ -142,7 +142,7 @@
 							     srcset="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg, images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg 2x, images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg 3x, images/hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg 4x" />
 							<div class="card-container">
 								<span class="card-title">Hôtel Tout Bleu et Blanc</span>
-								<small>Nuit à partir de 68<b>€</b></small>
+								<small>Nuit à partir de <b>68€</b></small>
 								<div class="rating">
 									<i class="fa fa-star full"></i>
 									<i class="fa fa-star full"></i>
@@ -157,7 +157,7 @@
 			</section>
 			<section id="hebergements">
 				<h2>Hébergements à Marseille</h2>
-				<div>
+				<div id="lodging-cards">
 					<a class="card-link" href="#/hebergements/auberge-la-cannebiere">
 						<article class="card">
 							<img alt="Photography of an hostel room at Auberge la Cannebière" class="card-thumbnail"
@@ -171,7 +171,7 @@
 							</picture>-->
 							<div class="card-container">
 								<span class="card-title">Auberge la Cannebière</span>
-								<small>Nuit à partir de 25<b>€</b></small>
+								<small>Nuit à partir de <b>25€</b></small>
 								<div class="rating">
 									<i class="fa fa-star full"></i>
 									<i class="fa fa-star full"></i>
@@ -189,7 +189,7 @@
 							     srcset="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg, images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg 2x, images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg 3x, images/hebergements/1_xlarge/fred-kleber-gTbaxaVLvsg-unsplash.jpg 4x" />
 							<div class="card-container">
 								<span class="card-title">Hôtel du port</span>
-								<small>Nuit à partir de 52<b>€</b></small>
+								<small>Nuit à partir de <b>52€</b></small>
 								<div class="rating">
 									<i class="fa fa-star full"></i>
 									<i class="fa fa-star full"></i>
@@ -207,7 +207,7 @@
 							     srcset="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg, images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg 2x, images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg 3x, images/hebergements/1_xlarge/reisetopia-B8WIgxA_PFU-unsplash.jpg 4x" />
 							<div class="card-container">
 								<span class="card-title">Hôtel Les mouettes</span>
-								<small>Nuit à partir de 76<b>€</b></small>
+								<small>Nuit à partir de <b>76€</b></small>
 								<div class="rating">
 									<i class="fa fa-star full"></i>
 									<i class="fa fa-star full"></i>
@@ -225,7 +225,7 @@
 							     srcset="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg, images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg 2x, images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg 3x, images/hebergements/1_xlarge/annie-spratt-Eg1qcIitAuA-unsplash.jpg 4x" />
 							<div class="card-container">
 								<span class="card-title">Hôtel de la mer</span>
-								<small>Nuit à partir de 46<b>€</b></small>
+								<small>Nuit à partir de <b>46€</b></small>
 								<div class="rating">
 									<i class="fa fa-star full"></i>
 									<i class="fa fa-star full"></i>
@@ -243,7 +243,7 @@
 							     srcset="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg, images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 2x, images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 3x, images/hebergements/1_xlarge/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 4x" />
 							<div class="card-container">
 								<span class="card-title">Auberge Le Panier</span>
-								<small>Nuit à partir de 23<b>€</b></small>
+								<small>Nuit à partir de <b>23€</b></small>
 								<div class="rating">
 									<i class="fa fa-star full"></i>
 									<i class="fa fa-star full"></i>
@@ -261,7 +261,7 @@
 							     srcset="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg, images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 2x, images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 3x, images/hebergements/1_xlarge/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 4x" />
 							<div class="card-container">
 								<span class="card-title">Hôtel chez Amina</span>
-								<small>Nuit à partir de 96<b>€</b></small>
+								<small>Nuit à partir de <b>96€</b></small>
 								<div class="rating">
 									<i class="fa fa-star full"></i>
 									<i class="fa fa-star full"></i>
