--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<body>
 		<nav class="nav-bar">
 			<div class="nav-bar-container">
-				<a class="nav-bar-brand" href="/">
+				<a class="nav-bar-brand" href="./">
 					<img alt="Logo Reservia" src="images/logo/Reservia.svg" />
 				</a>
 				<a class="nav-bar-link text-blue bold" href="#">S'inscrire</a>
@@ -99,7 +99,7 @@
 					<i class="fa fa-chart-line"></i>
 				</div>
 				<div>
-					<a class="card-link" href="#/hebergements/hotel-le-soleil-du-matin">
+					<a class="card-link" href="#">
 						<article class="card card-horizontal">
 							<img alt="Popular photography" class="card-thumbnail"
 							     src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
@@ -117,7 +117,7 @@
 							</div>
 						</article>
 					</a>
-					<a class="card-link" href="#/hebergements/au-coeur-de-l-eau-chambres-d-hotes">
+					<a class="card-link" href="#">
 						<article class="card card-horizontal">
 							<img alt="Popular photography" class="card-thumbnail"
 							     src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
@@ -135,7 +135,7 @@
 							</div>
 						</article>
 					</a>
-					<a class="card-link" href="#/hebergements/hotel-tout-bleu-et-blanc">
+					<a class="card-link" href="#">
 						<article class="card card-horizontal">
 							<img alt="Popular photography" class="card-thumbnail"
 							     src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
@@ -158,7 +158,7 @@
 			<section id="hebergements">
 				<h2>Hébergements à Marseille</h2>
 				<div id="lodging-cards">
-					<a class="card-link" href="#/hebergements/auberge-la-cannebiere">
+					<a class="card-link" href="#">
 						<article class="card">
 							<img alt="Photography of an hostel room at Auberge la Cannebière" class="card-thumbnail"
 							     src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
@@ -182,7 +182,7 @@
 							</div>
 						</article>
 					</a>
-					<a class="card-link" href="#/hebergements/hotel-du-port">
+					<a class="card-link" href="#">
 						<article class="card">
 							<img alt="Photography of an hostel room at Hôtel du port" class="card-thumbnail"
 							     src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
@@ -200,7 +200,7 @@
 							</div>
 						</article>
 					</a>
-					<a class="card-link" href="#/hebergements/hotel-les-mouettes">
+					<a class="card-link" href="#">
 						<article class="card">
 							<img alt="Photography of an hostel room at Hôtel Les mouettes" class="card-thumbnail"
 							     src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
@@ -218,7 +218,7 @@
 							</div>
 						</article>
 					</a>
-					<a class="card-link" href="#/hebergements/hotel-de-la-mer">
+					<a class="card-link" href="#">
 						<article class="card">
 							<img alt="Photography of an hostel room at Hôtel de la mer" class="card-thumbnail"
 							     src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
@@ -236,7 +236,7 @@
 							</div>
 						</article>
 					</a>
-					<a class="card-link" href="#/hebergements/auberge-le-panier">
+					<a class="card-link" href="#">
 						<article class="card">
 							<img alt="Photography of an hostel room at Auberge Le Panier" class="card-thumbnail"
 							     src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
@@ -254,7 +254,7 @@
 							</div>
 						</article>
 					</a>
-					<a class="card-link" href="#/hebergements/hotel-chez-amina">
+					<a class="card-link" href="#">
 						<article class="card">
 							<img alt="Photography of an hostel room at Hôtel chez Amina" class="card-thumbnail"
 							     src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
@@ -273,12 +273,12 @@
 						</article>
 					</a>
 				</div>
-				<a class="read-more-link" href="#/hebergements">Afficher plus</a>
+				<a class="read-more-link" href="#">Afficher plus</a>
 			</section>
 			<section id="activites">
 				<h2>Activités à Marseille</h2>
 				<div id="cards-grid">
-					<a class="card-link" href="#/activites/marseille/vieux-port">
+					<a class="card-link" href="#">
 						<article class="card card-full">
 							<img alt="Photography of Vieux Port at Marseille" class="card-thumbnail"
 							     src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
@@ -288,7 +288,7 @@
 							</div>
 						</article>
 					</a>
-					<a class="card-link" href="#/activites/marseille/fort-de-pomegues">
+					<a class="card-link" href="#">
 						<article class="card card-full">
 							<img alt="Photography of Fort de Pomègues at Marseille" class="card-thumbnail"
 							     src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
@@ -298,7 +298,7 @@
 							</div>
 						</article>
 					</a>
-					<a class="card-link" href="#/activites/marseille/iles-du-frioul">
+					<a class="card-link" href="#">
 						<article class="card card-full">
 							<img alt="Photography of Îles du Frioul at Marseille" class="card-thumbnail"
 							     src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
@@ -308,7 +308,7 @@
 							</div>
 						</article>
 					</a>
-					<a class="card-link" href="#/activites/marseille/parc-national-d=es-calanques">
+					<a class="card-link" href="#">
 						<article class="card card-full">
 							<img alt="Photography of Parc National des Calanques at Marseille" class="card-thumbnail"
 							     src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
@@ -318,7 +318,7 @@
 							</div>
 						</article>
 					</a>
-					<a class="card-link" href="#/activites/marseille/notre-dame-de-la-garde">
+					<a class="card-link" href="#">
 						<article class="card card-full">
 							<img alt="Photography of Notre-Dame-de-la-Garde at Marseille" class="card-thumbnail"
 							     src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
@@ -328,7 +328,7 @@
 							</div>
 						</article>
 					</a>
-					<a class="card-link" href="#/activites/marseille/parc-longchamp">
+					<a class="card-link" href="#">
 						<article class="card card-full">
 							<img alt="Photography of Parc Longchamp at Marseille" class="card-thumbnail"
 							     src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
