style: Removing dev classes and replacing them by specific selectors
Signed-off-by: Jaucordi1 <jaucordi@gmail.com>

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 			<header id="header">
 				<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
 				<small class="text-grey">En plein centre ville ou en pleine nature</small>
-				<form action="#" class="flex-horizontal" id="search-form">
-					<label class="flex-vertical justify-center" for="location_search">
+				<form action="#" id="search-form">
+					<label for="location_search">
 						<i class="fa fa-map-marker"></i>
 					</label>
 					<input id="location_search" name="location_search" type="text" />
