feat: Adding hover style to filters

--- a/index.html
+++ b/index.html
@@ -66,24 +66,28 @@
 					<button class="filter" type="button">
 						<span class="filter-icon">
 							<i class="fa fa-money-bill"></i>
+							<i class="fa cross-icon"></i>
 						</span>
 						<span class="filter-text">Économique</span>
 					</button>
 					<button class="filter" type="button">
 						<span class="filter-icon">
 							<i class="fa fa-child"></i>
+							<i class="fa cross-icon"></i>
 						</span>
 						<span class="filter-text">Familial</span>
 					</button>
 					<button class="filter" type="button">
 						<span class="filter-icon">
 							<i class="fa fa-heart"></i>
+							<i class="fa cross-icon"></i>
 						</span>
 						<span class="filter-text">Romantique</span>
 					</button>
 					<button class="filter" type="button">
 						<span class="filter-icon">
 							<i class="fa fa-dog"></i>
+							<i class="fa cross-icon"></i>
 						</span>
 						<span class="filter-text">Animaux autorisés</span>
 					</button>
